# Operating-System

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
bss/: meson.build
bss/include/: bss.h  meson.build
bss/src/: bss.c  meson.build
bss/test/: meson.build  p_test.c  potato_multi_test.c  potato_test.c  simple_test.c  v_test.c
hello-ext2/: grade.py  test_lab6.py
hello-ext2/src/: ext2-create.c
lecture/: counter  counter.c
lecture/week_3/: input.txt  interupt  interupt.c  poll  poll.c  read_write_terminal  read_write_terminal.c  signal  signal.c
pht/src/: hash-table-v1.c  hash-table-v2.c
ssp/src/: ssp.c
ssp/tests/: echo-cat-cat.c
tps/src/: main.c
vms/src/: main.c  vms.c
vms/tests/: copy-3.c
wut/src/: wut.c
